# fcitx5-vinput

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  README_zh.md  flake.nix  justfile
.github/workflows/: channels.yml  ci.yml  release.yml  verify.yml
data/: default-config.json
data/asr-providers/: README.md  elevenlabs_speech_to_text.py
data/llm-adaptors/: README.md  mtranserver_proxy.py
docs/: sherpa-capi-vinput-model-draft.md
extensions/: README.md
extensions/asr/: elevenlabs_speech_to_text.py
extensions/llm/: mtranserver_proxy.py
i18n/: vinput-gui_zh_CN.ts
packaging/arch/: PKGBUILD.in
packaging/debian/: control  rules
packaging/fedora/: fcitx5-vinput.spec
packaging/flatpak/: ci-manifest.yaml  org.fcitx.Fcitx5.Addon.Vinput.yaml
patches/: kaldi-openfst-ngram.patch
po/: fcitx5-vinput.pot  zh_CN.po
scripts/: build-sherpa-onnx.sh  build-vosk.sh  ci-install-build-deps.sh  ci-verify-channel-install.sh  sherpa-onnx-vars.sh  vosk-vars.sh
src/addon/: vinput.cpp  vinput.h  vinput_dbus.cpp  vinput_keyevent.cpp  vinput_menu.cpp
src/addon/core/: vinput.cpp  vinput.h
src/addon/dbus/: vinput_dbus.cpp
src/addon/input/: vinput_keyevent.cpp
src/addon/menu/: vinput_menu.cpp
src/cli/: CMakeLists.txt  cli_helpers.h  command_adaptor.cpp  command_adaptor.h  command_asr.cpp  command_config.cpp  command_config.h  command_daemon.cpp  command_daemon.h  command_device.cpp  command_device.h  command_extension.cpp  command_extension.h  command_hotword.cpp  command_hotword.h  command_init.cpp  command_init.h  command_llm.cpp  command_llm.h  command_model.cpp  command_model.h  command_recording.cpp  command_recording.h  command_registry.cpp  command_registry.h  command_scene.cpp  command_scene.h  command_status.h  dbus_client.cpp  dbus_client.h  main.cpp  systemd_client.cpp  systemd_client.h
src/cli/asr/: command_asr.cpp  command_asr.h  command_model.cpp  command_model.h
src/cli/config/: action.h  asr_actions.cpp  asr_actions.h  config_actions.cpp  config_actions.h  init_actions.cpp  init_actions.h  llm_actions.cpp  llm_actions.h  register.cpp  register.h  register_asr.cpp  register_config.cpp  register_device.cpp  register_init.cpp  register_llm.cpp  register_scene.cpp  scene_actions.cpp  scene_actions.h
src/cli/control/: recording_actions.cpp  recording_actions.h  register_recording.cpp
src/cli/llm/: command_adaptor.cpp
src/cli/utils/: cli_helpers.h  editor_utils.cpp  formatter.cpp  formatter.h
src/common/: CMakeLists.txt  adaptor_manager.cpp  adaptor_manager.h  asr_defaults.h  config.h.in  config_path.cpp  config_path.h  core_config.cpp  core_config.h  dbus_interface.h  error_info.h  extension_manager.cpp  extension_manager.h  file_utils.cpp  llm_defaults.h  model_manager.cpp  model_manager.h  model_repository.cpp  model_repository.h  path_utils.cpp  path_utils.h  postprocess_scene.cpp  postprocess_scene.h  process_utils.h  registry_cache.cpp  registry_i18n.cpp  registry_i18n.h  script_resource.cpp  vinput_config.cpp
src/common/asr/: model_manager.cpp  model_manager.h
src/common/config/: config_router.cpp  config_router.h  core_config.h  core_config_defaults.cpp  core_config_json.cpp  core_config_normalize.cpp  core_config_resolve.cpp  core_config_store.cpp  core_config_types.h  core_config_validate.cpp  vinput_config.cpp
src/common/llm/: adaptor_manager.cpp  adaptor_manager.h  defaults.h
src/common/registry/: cache.cpp  cache.h  i18n.cpp  model_repository.cpp  registry_cache.cpp  registry_fetch.cpp  registry_fetch.h  registry_i18n.cpp  registry_i18n.h  registry_models.cpp  registry_models.h  registry_scripts.cpp  registry_scripts.h  script_resource.cpp  script_resource.h
src/common/scene/: postprocess_scene.cpp  postprocess_scene.h
src/common/utils/: debug_log.h  downloader.cpp  downloader.h  file_utils.cpp  file_utils.h  path_utils.cpp  path_utils.h  process_utils.cpp  process_utils.h  string_utils.h
src/daemon/: CMakeLists.txt  asr_engine.h  asr_provider.cpp  asr_provider.h  dbus_service.cpp  main.cpp  post_processor.cpp  post_processor.h
src/daemon/asr/: asr_engine.cpp
src/daemon/asr/backends/: command_streaming_backend.cpp  sherpa_offline_backend.cpp  sherpa_streaming_backend.cpp  vosk_offline_backend.cpp  vosk_offline_backend.h  vosk_streaming_backend.cpp
src/daemon/asr/runtime/: backend_factory.cpp  recognition_session_manager.cpp  recognition_session_manager.h
src/daemon/audio/: audio_capture.cpp
src/daemon/postprocess/: post_processor.cpp  post_processor.h
src/daemon/runtime/: daemon_runtime_controller.cpp  dbus_service.cpp  recognition_pipeline.cpp
src/gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  vinput-gui.desktop.in
src/gui/app/: mainwindow.cpp  mainwindow.h
src/gui/pages/control/: control_page.cpp  control_page.h
src/gui/pages/llm/: llm_page.cpp  llm_page.h
src/gui/pages/resources/: resource_page.cpp
src/gui/utils/: cli_runner.cpp
